--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=BhuTuka+Expanded+One&family=Courgette&family=Open+Sans:wght@500&family=Raleway:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="resume.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
+    <link rel="stylesheet" href="resume.css">    
 </head>
 <body>
   <section class="all-cover">
@@ -22,10 +21,10 @@
          <div class="container">
                 <div class="flexbanner">
                     <div class="bannercontent">
-                     <h3 data-aos="zoom-in-down" data-aos-duration="2000">I'am </h3>
-                       <h1 data-aos="zoom-in-down" data-aos-duration="2000">Abinesh</h1>
-                        <h4 data-aos="zoom-in" data-aos-duration="3000"><span> Front End Developer </span> </h4>
-                        <div class="btn-flex" data-aos="fade-up-right" data-aos-duration="3000">
+                     <h3 data-aos="zoom-in-down">I'Am </h3>
+                       <h1 data-aos="zoom-in-down"> Abinesh</h1>
+                        <h4 data-aos="zoom-in"><span class="multi"> Front End Developer </span> </h4>
+                        <div class="btn-flex">
                             <a href="#" class="face"> <i class="fa fa-facebook" aria-hidden="true"></i> </a>
                             <a href="#" class="watts">  <i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                             <a href="#" class="twit"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -39,7 +38,7 @@
           <section class="servicesection">
               <div class="container">
                 <div class="flexservice">
-                    <div class="servicecontent" data-aos="zoom-in" data-aos-duration="3000">
+                    <div class="servicecontent">
                 <img src="images/IMG_23-03-07_100218307_1.jpg" class="img-1">
                 <img src="images/IMG_23-03-07_100218307_1.jpg" class="img-2">
                     </div>
@@ -47,7 +46,7 @@
                     <h2> About Me</h2>
                     <h1> My Name Abinesh</h1>
                     <p class="servicepara">I From Sambavarvadakarai. I Did My Graduation In Diploma(DME) From S.Thangapazham polytechnic college, Vasudavanallur. My Short Term Goal is Get a Job in IT Company. My Long Term Goal is Achieve a Good Position Where I Can Built My career And Help Organization Too. My Hobbies or BikeDriving, Watch Movie.</p>
-                   <div class="back-box"  data-aos="fade-left" data-aos-duration="3000">
+                   <div class="back-box">
                          <div class="serviceone">
                       <div>
                       <h3>NAME</h3>
@@ -82,7 +81,7 @@
                      <p>Self-motivated IT professional with deep knowledge and proficiency in Html, Css, Bootstap, Javascript, React,Github and mobile responsive website development,
                        as well as creating an efficient code, seeking for the position of Front-end web Developer.</p>
                     </div>
-                    <div class="menucontent2" data-aos="flip-up" data-aos-duration="2000">
+                    <div class="menucontent2">
                       <h2> DIPLOMA  MECHANICAL ENGINEERING </h2>
                         <h1>76%</h1>
                         <p>S.Thangapazham Polytechnic College, Vasudavanallur. </p>
@@ -101,7 +100,7 @@
                    <h1>My Portfolio </h1>
                      <p>My All HTML,CSS,BOOTSTRAP,JAVASCRIPT,REACT.tasks and webpages in the portfolio section.</p>
                 </div>
-                <div class="flexspecial" data-aos="zoom-out-up" data-aos-duration="3000">
+                <div class="flexspecial">
                     <div class="specialcontent">
                       <a href="file:///D:/git%20project/webpage-task/bootstap.html" target="blank"> 
 					  <img src="images/Screenshot 01.png"></a>
@@ -135,10 +134,10 @@
     <div class="sec-title">
          <h1> Contact Us</h1>
      </div>
-<div id="contact-sec" >
+<div id="contact-sec">
 <div class="servicesect">
 <div class="col-lg-6">
-<div class="servicecard" data-aos="zoom-in">
+<div class="servicecard">
 <div class="serviceitem">
 <div class="service-icons">
   <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -149,7 +148,7 @@
 </div>
 </div>
 <div class="col-lg-6">
-<div class="servicecard" data-aos="zoom-in">
+<div class="servicecard">
 <div class="serviceitem">
  <div class="service-icons">
   <i class="fa fa-envelope" aria-hidden="true"></i>
@@ -160,7 +159,7 @@
 </div>
 </div>
 <div class="col-lg-6">
-<div class="servicecard" data-aos="zoom-in">
+<div class="servicecard">
 <div class="serviceitem">
    <div class="service-icons">
 	<i class="fa fa-phone-square" aria-hidden="true"></i>
@@ -171,7 +170,7 @@
 </div>
 </div>
 <div class="col-lg-6">
-<div class="servicecard" data-aos="zoom-in">
+<div class="servicecard">
 <div class="serviceitem">
 <div class="service-icons">
  <!-- <i class="fa fa-github" aria-hidden="true"></i> -->
@@ -182,24 +181,20 @@
 </div>
 </div>
 </div>
-
 </div>
 </div>
-
-
 </section>
-
-<!-- contact-sec end -->
-
-	  
+<!-- contact-sec end -->	  
   </section>
-  
-  
-  
-  
-     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-     <script>
-      AOS.init();
-    </script>
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+var typingEffect=new Typed(".multi",{
+strings :["Front-end Developer","Web Design"],
+loop:true,
+typeSpeed:100,
+backSpeed:250,
+backDelay:1000,
+})
+</script>
 </body>
 </html>
