--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             </div>
             <div class="flexspecial">
                 <div class="specialcontent">
-                    <a href="http://abinesh270103.github.io/task09" target="blank"> 
+                    <a href="https://kabinesh2713.github.io/Flexor-Webside/" target="blank"> 
 					<img src="images/Screenshot 01.png"></a>
                 </div>
                 <div class="specialcontent">
-                    <a href="http://abinesh270103.github.io/boot01" target="blank"> 
+                    <a href="https://kabinesh2713.github.io/Presento-Webside/" target="blank"> 
 			        <img src="images/Screenshot 02.png"></a>
                 </div>
                 <div class="specialcontent">
@@ -121,7 +121,7 @@
 		    		<img src="images/Screenshot (8).png"></a>
                 </div>
                 <div class="specialcontent">
-                    <a href="file:///D:/fabevy/FED%2005/javascript/bulid%20calculator.html" target="blank">
+                    <a href=" https://kabinesh2713.github.io/calculator01/" target="blank">
 				    <img src="images/Screenshot (6).png"></a>
                 </div>
                 <div class="specialcontent">
@@ -130,7 +130,7 @@
                 </div>
                 <div class="specialcontent">
                     <a href="file:///D:/git%20project%20JS/General%20task/facebook-login/facebook%20login.html" target="blank"> 
-					<img src="images/Screenshot (188).png"></a>
+					<img src="images/Screenshot (10).png"></a>
                 </div>
             </div> 
         </div>
