--- a/index.html
+++ b/index.html
@@ -17,9 +17,29 @@
     <video class="back-video" muted autoplay loop>
         <source src="video.mp4">
     </video>
-	
+<div class="nav-section">
+			<header class="header">
+				<div class="nav-container">
+					<nav class="navbar">
+					<a href="#" class="nav-branding">ABI<span>NESH</span></a>
+				<ul class="nav-menu">
+						<li class="nav-item" id="active"> <a href="#home"class="nav-link">Home</a></li>
+						<li class="nav-item"> <a href="#about"class="nav-link">About</a></li>
+						<li class="nav-item"> <a href="#skill" class="nav-link">Skill</a></li>
+						<li class="nav-item"> <a href="#portfolio" class="nav-link">Portfolio</a></li>
+						<li class="nav-item"> <a href="#contact" class="nav-link">Contact</a></li>
+					</ul>
+					<div class="hamburger">
+						<span class="bar"></span>
+						<span class="bar"></span>
+						<span class="bar"></span>
+					</div>
+				</nav>
+			</header>
+            </div>
+</div>			
 <!--------------------- banner-sec start ---------------->
-    <section class="bannersection">    
+    <section id="home" class="bannersection">    
         <div class="container">
             <div class="flexbanner">
                 <div class="bannercontent">
@@ -39,7 +59,7 @@
 <!--------------------- banner-sec end ----------------->
 	
 <!--------------------- service-sec start -------------->
-    <section class="servicesection">
+    <section id="about" class="servicesection">
         <div class="container">
             <div class="flexservice">
                 <div class="servicecontent">
@@ -68,7 +88,7 @@
                     </div>
                         </div>
                     <div class="downbtn">
-                    <a href="presentation 1.pptx" download> DOWNLOAD CV </a>
+                    	<a href="ABINESH.pdf" downloaded> DOWNLOAD CV </a>
                     </div>
                         </div>
                     </div>
@@ -78,7 +98,7 @@
 <!--------------------- service-sec end ---------------->
 	
 <!--------------------- menu-sec start ----------------->
-    <section class="menusection">
+    <section id="skill" class="menusection">
         <div class="container">
             <div class="flexmenu">
                 <div class="menucontent">
@@ -101,51 +121,41 @@
 <!--------------------- menu-sec end --------------------->
 	 
 <!--------------------- portfolio-sec start -------------->
-    <section class="portfoliosection">
-        <div class="container">
-            <div class="sec-title">
-                <h1>My Portfolio </h1>
-                <p>My All HTML,CSS,BOOTSTRAP,JAVASCRIPT,REACT.tasks and webpages in the portfolio section.</p>
-            </div>
-            <div class="flexspecial">
-                <div class="specialcontent">
-                    <a href="https://kabinesh2713.github.io/Flexor-Webside/" target="blank"> 
-					<img src="images/Screenshot 01.png"></a>
-                </div>
-                <div class="specialcontent">
-                    <a href="https://kabinesh2713.github.io/Presento-Webside/" target="blank"> 
-			        <img src="images/Screenshot 02.png"></a>
-                </div>
-                <div class="specialcontent">
-                    <a href="file:///D:/fabevy/FED%2005/javascript/swiggy%20cards/swiggy%20cards.html" target="blank"> 
-		    		<img src="images/Screenshot (8).png"></a>
-                </div>
-                <div class="specialcontent">
-                    <a href=" https://kabinesh2713.github.io/calculator01/" target="blank">
-				    <img src="images/Screenshot (6).png"></a>
-                </div>
-                <div class="specialcontent">
-                    <a href="https://kabinesh2713.github.io/clock01/" target="blank">
-		      		<img src="images/Screenshot (7).png"></a>
-                </div>
-                <div class="specialcontent">
-                    <a href="file:///D:/git%20project%20JS/General%20task/facebook-login/facebook%20login.html" target="blank"> 
-					<img src="images/Screenshot (10).png"></a>
-                </div>
-            </div> 
-        </div>
-    </section>      
+<section class="portfoliosection" id="portfolio">
+    <div class="container">
+		<h1 class="title">My<span> Project</span></h1>
+            <p class="gin">My All Project HTML,CSS,BOOTSTRAP,JAVASCRIPT,REACT JS.tasks and webpages in the portfolio section.</p>
+		<div class="flexspecial">
+			<div class="specialcontent">
+			<a href="https://kabinesh2713.github.io/Flexor-Webside/"><img src="images/Screenshot 01.png"></a>
+			</div>
+			<div class="specialcontent">
+			<a href="https://kabinesh2713.github.io/Presento-Webside/"> <img src="images/Screenshot 02.png"></a>
+			</div>
+			<div class="specialcontent">
+			<a href="https://kabinesh2713.github.io/swiggywebside/"> <img src="images/Screenshot (11).png"></a>
+			</div>
+			<div class="specialcontent">
+			<a href="https://kabinesh2713.github.io/calculator01/"> <img src="images/Screenshot (6).png"></a>
+			</div>
+			<div class="specialcontent">
+			<a href="https://kabinesh2713.github.io/clock01/"><img src="images/Screenshot (7).png"></a>
+			</div>
+			<div class="specialcontent">
+			<a href="file:///D:/git%20project%20JS/General%20task/facebook-login/facebook%20login.html"><img src="images/Screenshot (10).png"></a>
+			</div>
+	    </div> 
+    </div>
+</section>
 <!--------------------- portfolio-sec end -------------------->	
 	
 <!------------------contact-sec start ------------------------>
     <section class="contact" id="contact">
         <div class="sec-title">
-            <h1> Contact Us</h1>
+            <h1 class="tcat"> Contact</h1>
         </div>
-        <div id="contact-sec">
             <div class="servicesect">
                 <div class="col-lg-6">
-                    <div class="servicecard">
 						<div class="serviceitem">
 							<div class="service-icons">
 								<i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -153,10 +163,8 @@
 								<h3><a href="https://maps.app.goo.gl/SWtYjBqSEedSJgzQ9">LOCATION</a></h3>
 								<p>4/3/25-Sudali Madan Kovile Street Sambavarvadakarai.</p>
 						</div>
-					</div>
 				</div>
 		<div class="col-lg-6">
-			<div class="servicecard">
 				<div class="serviceitem">
 					<div class="service-icons">
 						<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -164,10 +172,8 @@
 						<h3><a href="#">GMAIL</a></h3>
 						<p class="para">kpabinesh27@gmail.com</p>
 				</div>
-			</div>
 	    </div>
 		<div class="col-lg-6">
-			<div class="servicecard">
 				<div class="serviceitem">
 					<div class="service-icons">
 						<i class="fa fa-phone-square" aria-hidden="true"></i>
@@ -175,10 +181,8 @@
 						<h3><a href="#">CONTACT</a></h3>
 						<p class="para">6369121503</p>
 				</div>
-			</div>
 		</div>
 		<div class="col-lg-6">
-			<div class="servicecard">
 				<div class="serviceitem">
 					<div class="service-icons">
 					<!-- <i class="fa fa-github" aria-hidden="true"></i> -->
@@ -187,26 +191,38 @@
 						<h3><a href="https://github.com/abinesh270103">GIT HUB</a></h3>
 						<p class="para">abinesh270103</p>
 				</div>
-			</div>
 		</div>
 			</div>
-		</div>
 	</section>	
 <!------------------contact-sec end -------------------------->	 
- 
 </section>
 
-		<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-	<script>
-		var typingEffect=new Typed(".multi",{
-		strings :["Front-end Developer","Web Design"],
-		loop:true,
-		typeSpeed:100,
-		backSpeed:250,
-		backDelay:1000,
-		})
-	</script>
-	
+		<!-- <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> -->
+	<!-- <script> -->
+		<!-- var typingEffect=new Typed(".multi",{ -->
+		<!-- strings :["Front-end Developer","Web Design"], -->
+		<!-- loop:true, -->
+		<!-- typeSpeed:100, -->
+		<!-- backSpeed:250, -->
+		<!-- backDelay:1000, -->
+		<!-- }) -->
+	<!-- </script> -->
+	 
+<script>
+const hamburger = document.querySelector(".hamburger");
+				const navMenu = document.querySelector(".nav-menu");
+		
+				hamburger.addEventListener("click", () => {
+					hamburger.classList.toggle("active");
+					navMenu.classList.toggle("active");
+				})
+		
+				document.querySelectorAll(".nav-link").forEach(n => n.addEventListener("click" , () => {
+					hamburger.classList.remove("active");
+					navMenu.classList.remove("active");
+				}))
+
+</script>
 	
 </body>
 </html>
