--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 			<link rel="stylesheet" href="resume.css">    
 </head>
 <body>
-
 <section class="all-cover">
     <video class="back-video" muted autoplay loop>
         <source src="video.mp4">
@@ -21,7 +20,7 @@
 			<header class="header">
 				<div class="nav-container">
 					<nav class="navbar">
-					<a href="#" class="nav-branding">ABI<span>NESH</span></a>
+					<a href="#" class="nav-branding">ABINESH</a>
 				<ul class="nav-menu">
 						<li class="nav-item" id="active"> <a href="#home"class="nav-link">Home</a></li>
 						<li class="nav-item"> <a href="#about"class="nav-link">About</a></li>
@@ -49,8 +48,8 @@
                     <div class="btn-flex">
                         <a href="#" class="face"> <i class="fa fa-facebook" aria-hidden="true"></i> </a>
                         <a href="#" class="watts">  <i class="fa fa-whatsapp" aria-hidden="true"></i></a>
-                        <a href="#" class="twit"> <i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="#" class="insta"><i class="fa fa-instagram" aria-hidden="true"></i> </a>
+                        <a href="#" class="insta"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
+                        <a href="https://github.com/abinesh270103" class="twit"><i class="fa fa-github" aria-hidden="true"></i> </a>
                     </div>
                 </div>
             </div> 
@@ -104,7 +103,7 @@
                 <div class="menucontent">
                     <h3>My Skills</h3>
                     <h1>I'm great in what I do and I'm loving it </h1>
-                    <p>Self-motivated IT professional with deep knowledge and proficiency in Html, Css, Bootstap, Javascript, React,Github and mobile responsive website development,
+                    <p>Self-motivated IT professional with deep knowledge and proficiency in Html, Css, Bootstap, Javascript, React Js,Github and mobile responsive website development,
                        as well as creating an efficient code, seeking for the position of Front-end web Developer.</p>
                 </div>
                 <div class="menucontent2">
@@ -207,7 +206,6 @@
 		<!-- backDelay:1000, -->
 		<!-- }) -->
 	<!-- </script> -->
-	 
 <script>
 const hamburger = document.querySelector(".hamburger");
 				const navMenu = document.querySelector(".nav-menu");
@@ -221,8 +219,6 @@ const hamburger = document.querySelector(".hamburger");
 					hamburger.classList.remove("active");
 					navMenu.classList.remove("active");
 				}))
-
 </script>
-	
 </body>
 </html>
